--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,18 @@
 
     </dependencies>
 
-
-
+    <build>
+        <plugins>
+            <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.1</version>
+            <configuration>
+                <suiteXmlFiles>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <suiteXmlFile>${xmlFileName}</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
